[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "tenacity/_version.py"

[project]
name = "tenacity"
dynamic = ["version"]
description = "Retry code until it succeeds"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Julien Danjou", email = "julien@danjou.info" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/jd/tenacity"
Documentation = "https://tenacity.readthedocs.io"
Source = "https://github.com/jd/tenacity"
Issues = "https://github.com/jd/tenacity/issues"
Changelog = "https://tenacity.readthedocs.io/en/latest/changelog.html"

[project.optional-dependencies]
doc = [
    "reno",
    "sphinx",
]
test = [
    "pytest",
    "tornado>=4.5",
    "typeguard",
]

[dependency-groups]
dev = [
    "poethepoet",
    "pytest",
    "tornado>=4.5",
    "typeguard",
    "ruff",
    "mypy",
    "sphinx",
    "reno",
    "trio",
]

[tool.poe.tasks]
test = "pytest"
docs-doctest = "sphinx-build -a -E -W -b doctest doc/source doc/build"
docs-html = "sphinx-build -a -E -W -b html doc/source doc/build"
docs = ["docs-doctest", "docs-html"]
check = ["test", "docs"]
mypy = "mypy"
reno = "reno"

[tool.poe.tasks.lint]
sequence = [
    { cmd = "ruff check ." },
    { cmd = "ruff format --check ." },
]

[tool.poe.tasks.all]
sequence = [
    { ref = "lint" },
    { ref = "mypy" },
    { ref = "check" },
]

[tool.pytest.ini_options]
filterwarnings = [
    "once::DeprecationWarning",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = ["tenacity/_version.py"]

[tool.mypy]
strict = true
files = ["tenacity", "tests"]
show_error_codes = true
exclude = ["tenacity/_version\\.py"]

[[tool.mypy.overrides]]
module = "tornado.*"
ignore_missing_imports = true

