[metadata]
name = tenacity
license = Apache 2.0
url = https://github.com/jd/tenacity
summary = Retry code until it succeeeds
description-file =
    README.rst
long_description_content_type = text/x-rst
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/tenacity
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[options]
install_requires =
    six>=1.9.0
    futures>=3.0;python_version=='2.7'
    monotonic>=0.6;python_version=='2.7'

[options.extras_require]
doc =
    reno
    sphinx
    tornado>=4.5

[files]
packages = tenacity

[wheel]
universal = 1

[tool:pytest]
filterwarnings =
    # Show any DeprecationWarnings once
    once::DeprecationWarning
