[metadata]
name = tenacity
license = Apache 2.0
url = https://github.com/jd/tenacity
summary = Retry code until it succeeds
long_description = Tenacity is a general-purpose retrying library to simplify the task of adding retry behavior to just about anything.
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/tenacity
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
install_requires =
    six>=1.9.0
    futures>=3.0;python_version=='2.7'
    monotonic>=0.6;python_version=='2.7'
    typing>=3.7.4.1;python_version=='2.7'
packages = tenacity

[options.package_data]
tenacity = py.typed

[options.extras_require]
doc =
    reno
    sphinx
    tornado>=4.5

[wheel]
universal = 1

[tool:pytest]
filterwarnings =
    # Show any DeprecationWarnings once
    once::DeprecationWarning
