[metadata]
name = tenacity
license = Apache 2.0
url = https://github.com/jd/tenacity
summary = Retry code until it succeeds
long_description = Tenacity is a general-purpose retrying library to simplify the task of adding retry behavior to just about anything.
author = Julien Danjou
author_email = julien@danjou.info
home_page = https://github.com/jd/tenacity
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
install_requires =
python_requires = >=3.9
packages = find:

[options.packages.find]
include = tenacity*
exclude = tests

[options.package_data]
tenacity = py.typed

[options.extras_require]
doc =
    reno
    sphinx
test =
    pytest
    tornado>=4.5
    typeguard

[tool:pytest]
filterwarnings =
    # Show any DeprecationWarnings once
    once::DeprecationWarning
